maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  var x=0
  while(isOverBaggle==false){
    x=random10()
    if (x==1){left();}
    else if (x==2){right();}
    else if (isFacingWall==false){forward();}
    
  }
  pickupBaggle()
}